set(TARGET_NAME dollop)
set(TARGET_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(TARGET_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

file(GLOB_RECURSE PROJECT_SOURCES ${TARGET_SOURCE_DIR}/*.cc)
file(GLOB_RECURSE PROJECT_HEADERS ${TARGET_INCLUDE_DIR}/*.hh)
file(GLOB PROJECT_CONFIGS CMakeLists.txt)

add_library(${TARGET_NAME} SHARED
        ${PROJECT_SOURCES}
        ${PROJECT_HEADERS})
target_include_directories(${TARGET_NAME} PRIVATE
        ${TARGET_INCLUDE_DIR})
target_compile_definitions(${TARGET_NAME} PUBLIC)

